assets/css/main.scss
---
---

/*
 *    Minimal Mistakes Jekyll Theme
 *
 *  - Michael Rose
 *  - mademistakes.com
 *  - https://twitter.com/mmistakes
 *
*/

@import "vendor/breakpoint/breakpoint"; // media query mixins
@import "variables";
@import "mixins";
@import "vendor/susy/susy";

@import "reset";
@import "base";

@import "utilities";
@import "animations";
@import "tables";
@import "buttons";
@import "notices";
@import "masthead";
@import "navigation";
@import "footer";
@import "syntax";

@import "forms";

@import "page";
@import "archive";
@import "sidebar";

@import "vendor/font-awesome/fontawesome";
@import "vendor/font-awesome/solid";
@import "vendor/font-awesome/brands";
@import "vendor/magnific-popup/magnific-popup";
@import "print";

.paper-box {
    display: flex;
    justify-content: left;
    align-items: center;
    flex-direction: row;
    flex-wrap: wrap;
    border-bottom: 1px #efefef solid;
    padding: 1em 0 1em 0;
    

    .paper-box-image{
        justify-content: center;
        display: flex;
        width: 100%;
        order: 2;
        > div {
            width: 360px;
            max-width: 100%;
            aspect-ratio: 16 / 10;
            position: relative;
        }
        img {
            width: 100%;
            height: 100%;
            box-shadow: 3px 3px 6px #888;
            object-fit: cover;
        }
    }
    
    .paper-box-text{
        max-width: 100%;
        order: 1;
    }
    
    @include breakpoint($medium) {
        .paper-box-image{
            justify-content: left;
            min-width: 200px;
            max-width: 40%;
            order: 1;
        }
        
        .paper-box-text{
            justify-content: left;
            padding-left: 2em;
            max-width: 60%;
            order: 2;
        }

    }


}

.pub-links {
    display: flex;
    align-items: center;
    gap: .6rem;
    flex-wrap: nowrap;
    overflow-x: auto;
    margin-top: .35rem;

    a {
        display: inline-block;
        padding: .08rem .62rem;
        border: 1px solid #d3dae3;
        border-radius: 999px;
        text-decoration: none;
        line-height: 1.4;
        white-space: nowrap;
    }
}

$scroll_offset : 2em;
h1:before, .anchor:before { 
    content: ''; 
    display: block; 
    position: relative; 
    width: 0; 
    height: $scroll_offset; 
    margin-top: -$scroll_offset;
}

.badge {
    padding-left: 1rem;
    padding-right: 1rem;
    position: absolute;
    margin-top: .5em;
    margin-left: -.5em;
    color: white;
    background-color: #00369f;
    font-size: .8em;
}

